# alarmist

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  Makefile  README.md  TUTORIAL.md  pyproject.toml  requirements.txt  run_pipeline.py  setup.py
.cirro/: preprocess.py  process-form.json  process-input.json
.github/workflows/: bump_version.yml  docker.yml
data/: CD4_T_cell_marker_signatures.csv  CD8_T_cell_marker_signatures.csv  T_cell_marker_signatures.csv
data/LRdatabase/: CellChatDBv2.0.human.csv  CellPhoneDBv4.0.human.csv  CellPhoneDBv5.0.human.csv  CellPhoneDBv5.0.human_old.csv  cellchatv2.csv  signaling_type_difference.csv
docs/: TODOS.md
nextflow/: .nf-core.yml  CHANGELOG.md  CITATIONS.md  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json
nextflow/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
nextflow/.github/workflows/: awsfulltest.yml  awstest.yml  branch.yml  fix_linting.yml
nextflow/assets/: adaptivecard.json  email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yml  schema_input.json  sendmail_template.txt  slackreport.json
nextflow/conf/: base.config  modules.config  test.config  test_full.config
nextflow/docs/: README.md  output.md  usage.md
nextflow/modules/local/alarmist_bptf/: main.nf
nextflow/modules/local/alarmist_glm/: main.nf
nextflow/modules/local/alarmist_patchify/: main.nf
nextflow/modules/local/alarmist_project/: main.nf
nextflow/modules/local/alarmist_visualize/: main.nf
nextflow/subworkflows/local/utils_nfcore_alarmist_pipeline/: main.nf
nextflow/tests/: default.nf.test  nextflow.config
nextflow/workflows/: alarmist.nf
notebooks/: README.md  cellchat.ipynb  cellphonedb_v5_LR_pairs.tsv  convert_data.ipynb  create_kenny_csvs.ipynb  interaction_binary_matrix_pval05.csv  interaction_matrix_multiindex_pval05.csv  interaction_matrix_pval05.csv  interaction_summary_pval05.csv  lri_neighborhood_19018.dot  lri_neighborhood_87972_spread.dot  randomwalk.ipynb  single_cell.ipynb
notebooks/cpdb_inputs/: combo_counts.tsv  degs.tsv  microenvironments.tsv
samplesheets/: README.md  example.csv  test.csv
scripts/: 01_create_cell_matrix.py  01_random_walk.py  01_run_patch_lri_analysis.py  02_bptf_matrix_factorization.py  02_k_cell_neighborhood.py  03_bptf_visualization.py  04_poisson_glm.py  05_glm_results.py  06_single_cell.py  1.py  bptf_visualization_utils.py  check_glm_backend_parity.py  choosing_k.py  compare_bptf_results.py  cpdb_expr_summary.py  create_kenny_csvs.py  luad_1.py  luad_3.py  neighborhood_lri_analysis.py  patch_lri_analysis.py  run_test.sh  saha_ibd_1.py  saha_ibd_2.py  saha_ibd_more_1.py  saha_ibd_more_2.py  saha_ile_1.py  saha_ile_2.py  sc_neighborhood_lri_analysis.py  sync_pipeline.py  test_cirro_nf_integration.py  three_way_analysis_module.py  three_way_compare.py  three_way_compare_plot.py  trigger_pipeline.py
scripts/__pycache__/: 01_random_walk.build_neighborhoods_fast_csr-188.py39.1.nbc  01_random_walk.build_neighborhoods_fast_csr-188.py39.nbi  01_random_walk.build_neighborhoods_fast_weighted_bi-345.py39.1.nbc  01_random_walk.build_neighborhoods_fast_weighted_bi-345.py39.nbi  01_random_walk.build_neighborhoods_with_replacement_fast-775.py39.1.nbc  01_random_walk.build_neighborhoods_with_replacement_fast-775.py39.nbi
src/alarmist/: __init__.py  constants.py  log_config.py
src/alarmist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/alarmist/cli/: __init__.py  bptf.py  bptf_factorization.py  bptf_visualization.py  common.py  create_cell_matrix.py  glm.py  glm_results.py  log_config.py  patchify.py  poisson_glm.py  project.py  run_patch_lri_analysis.py  single_cell_analysis.py  visualize.py
src/alarmist/config/: __init__.py
src/alarmist/core/: __init__.py  contours.py  factorization.py  glm.py  lri.py  single_cell.py  torch_glm.py
src/alarmist/data/: __init__.py  databases.py  loaders.py
src/alarmist/plotting/: __init__.py  bptf_plots.py  colors.py  glm_plots.py  lri_overlap.py  motif_plots.py  single_cell_plots.py  spatial_plots.py  utils.py
tests/: test_integration.py  test_lri.py
tutorials/: GBM.ipynb
