[project]
name = "alarmist"
version = "0.1.0"
description = "Spatial ligand-receptor interaction analysis with BPTF matrix factorization for spatial transcriptomics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jiayi Fan", email = "jiayifan@example.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "anndata>=0.8.0",
    "scanpy>=1.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "liana>=0.1.0",
    "h5py",
    "pyarrow",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
    "networkx",
    "pillow",
    "statsmodels>=0.13.0",
    "sparse>=0.13.0",
    "numba>=0.56.0",
    "joblib>=1.1.0",
    "adjustText>=1.0.0",
    "bptf @ git+https://github.com/aschein/bptf.git",
]

[project.optional-dependencies]
viz = ["graphviz"]

[project.urls]
"Homepage" = "https://github.com/tansey-lab/alarmist"
"Source" = "https://github.com/tansey-lab/alarmist"

[project.scripts]
# Step 1: Patchify
alarmist-patchify = "alarmist.cli.patchify:main"

# Step 2: BPTF factorization
alarmist-bptf = "alarmist.cli.bptf:main"

# Step 3: Single-cell projection
alarmist-project = "alarmist.cli.project:main"

# Step 4: GLM analysis
alarmist-glm = "alarmist.cli.glm:main"

# Step 5: Visualization
alarmist-visualize = "alarmist.cli.visualize:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alarmist = ["config/lri_databases/*.csv"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "ipython",
    "nf-core",
    "multiqc",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter, but not always fixable)
    "N803",  # Argument name should be lowercase (common in ML: X for matrices)
    "N806",  # Variable name should be lowercase (common in ML: B, K, M for batch/dim)
    "N812",  # Lowercase imported as non-lowercase (common: torch.nn.functional as F)
    "N817",  # CamelCase imported as acronym
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
